fix (Overflow images): Add max-width to fix overflow images in content (closel #73)

--- a/src/base/helpers.less
+++ b/src/base/helpers.less
@@ -58,6 +58,10 @@ a img.aligncenter {
 	margin-right: auto
 }
 
+img {
+	max-width: 100%;
+}
+
 .media img {
 	margin-top: 7px;
 	max-width: 100%;
